--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
 <title>Give Me Hints</title>
+<meta name="description" content="HackTheBox hints.">
+  
+<meta property="og:title" content="Give Me Hints">
+<meta property="og:description" content="HackTheBox hints.">
+<meta property="og:image" content="https://rexkyris.github.io/pvv.png">
+<meta property="og:url" content="https://rexkyris.github.io/">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Give Me Hints">
+<meta name="twitter:description" content="HackTheBox hints.">
+<meta name="twitter:image" content="https://rexkyris.github.io/pvv.png"> 
 <style>
 :root{
   --accent:#06b6ff;
@@ -467,5 +479,6 @@ searchForm.addEventListener('submit', () => setTimeout(updateVignetteHeight, 50)
 
 </body>
 </html>
+
 
 
