--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
-<title>Give Me Hints</title>
+<title>HackTheBox Hints</title>
 <meta name="description" content="HackTheBox hints.">
   
 <meta property="og:title" content="Give Me Hints">
@@ -278,7 +278,7 @@ html, body {
 
 
 
-<div id="hxLogo">HTB</div>
+<div id="hxLogo">rxk</div>
 <div class="button-row">
     <a href="https://github.com/rexkyris" target="_blank" class="social-btn">
         <i class="fab fa-github"></i>
@@ -479,6 +479,7 @@ searchForm.addEventListener('submit', () => setTimeout(updateVignetteHeight, 50)
 
 </body>
 </html>
+
 
 
 
